test/conformance/kuttl/verifyImages/clusterpolicy/standard/keyed-basic/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: keyed-basic-policy
status:
  ready: true
